--- a/app/src/main/res/layout/file_item_layout.xml
+++ b/app/src/main/res/layout/file_item_layout.xml
@@ -43,8 +43,9 @@
         android:layout_height="wrap_content"
         android:text="TEST"
         android:textColor="@color/black"
+        android:textSize="8sp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
